Practica4/generated/y.output
Estado 144 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: program $end

    1 program: header_program block

    2 $@1: %empty

    3 block: start_block $@1 local_var_dec sub_progs sentences end_block

    4 sub_progs: sub_progs sub_prog
    5          | %empty

    6 $@2: %empty

    7 sub_prog: header_subprogram $@2 block

    8 $@3: %empty

    9 $@4: %empty

   10 local_var_dec: START_VAR_DEC $@3 local_var $@4 END_VAR_DEC
   11              | %empty

   12 header_program: type MAIN PL PR

   13 start_block: BEGIN_P

   14 end_block: END

   15 local_var: local_var var_body
   16          | var_body

   17 $@5: %empty

   18 var_body: type $@5 list_id SEMICOLON
   19         | error

   20 list_id: list_id COMMA ID
   21        | ID
   22        | error

   23 $@6: %empty

   24 header_subprogram: type ID PL $@6 parameters PR
   25                  | type ID PL PR

   26 parameters: parameters COMMA type ID
   27           | type ID
   28           | error

   29 sentences: sentences sentence
   30          | sentence

   31 sentence: block
   32         | sentence_assign
   33         | sentence_if_then_else
   34         | sentence_while
   35         | sentence_input
   36         | sentence_output
   37         | sentence_return
   38         | sentence_do_until
   39         | sentence_list_forward_back
   40         | sentence_list_start_cursor
   41         | error

   42 sentence_assign: ID ASSIGN expr SEMICOLON

   43 sentence_if_then_else: IF PL expr PR sentence
   44                      | IF PL expr PR sentence ELSE sentence

   45 sentence_while: WHILE PL expr PR sentence

   46 sentence_input: INPUT CAD COMMA list_id SEMICOLON
   47               | INPUT list_id SEMICOLON

   48 sentence_output: OUTPUT list_expr_cad SEMICOLON

   49 sentence_return: RETURN expr SEMICOLON

   50 sentence_do_until: DO sentence UNTIL PL expr PR SEMICOLON

   51 sentence_list_forward_back: expr OP_LIST SEMICOLON

   52 sentence_list_start_cursor: OP_LIST_START_CURSOR expr SEMICOLON

   53 expr: PL expr PR
   54     | ID
   55     | const
   56     | function_call
   57     | OP_UNIT expr
   58     | expr OP_BIN expr
   59     | error

   60 $@7: %empty

   61 function_call: ID PL $@7 list_expr PR

   62 $@8: %empty

   63 function_call: ID PL $@8 PR

   64 list_expr: list_expr COMMA expr
   65          | expr

   66 type: TYPE
   67     | LIST TYPE

   68 const: INT
   69      | FLOAT
   70      | CHAR
   71      | BOOL
   72      | const_list

   73 const_list: list_of_int
   74           | list_of_float
   75           | list_of_char
   76           | list_of_bool

   77 list_of_int: BEGIN_LIST list_int END_LIST

   78 list_int: list_int COMMA INT
   79         | INT

   80 list_of_float: BEGIN_LIST list_float END_LIST

   81 list_float: list_float COMMA FLOAT
   82           | FLOAT

   83 list_of_char: BEGIN_LIST list_char END_LIST

   84 list_char: list_char COMMA CHAR
   85          | CHAR

   86 list_of_bool: BEGIN_LIST list_bool END_LIST

   87 list_bool: list_bool COMMA BOOL
   88          | BOOL

   89 list_expr_cad: list_expr_cad COMMA expr_cad
   90              | expr_cad

   91 expr_cad: expr
   92         | CAD


Terminales con las reglas donde aparecen

$end (0) 0
error (256) 19 22 28 41 59
MAIN (258) 12
IF (259) 43 44
ELSE (260) 44
DO (261) 50
UNTIL (262) 50
OP_BIN (263) 58
OP_LIST (264) 51
OP_LIST_START_CURSOR (265) 52
OP_UNIT (266) 57
TYPE (267) 66 67
BEGIN_LIST (268) 77 80 83 86
END_LIST (269) 77 80 83 86
ASSIGN (270) 42
PL (271) 12 24 25 43 44 45 50 53 61 63
PR (272) 12 24 25 43 44 45 50 53 61 63
BEGIN_P (273) 13
END (274) 14
COMMA (275) 20 26 46 64 78 81 84 87 89
SEMICOLON (276) 18 42 46 47 48 49 50 51 52
INPUT (277) 46 47
OUTPUT (278) 48
START_VAR_DEC (279) 10
END_VAR_DEC (280) 10
LIST (281) 67
ID (282) 20 21 24 25 26 27 42 54 61 63
RETURN (283) 49
WHILE (284) 45
BOOL (285) 71 87 88
INT (286) 68 78 79
FLOAT (287) 69 81 82
CHAR (288) 70 84 85
CAD (289) 46 92


No terminales con las reglas donde aparecen

$accept (35)
    en la izquierda: 0
program (36)
    en la izquierda: 1, en la derecha: 0
block (37)
    en la izquierda: 3, en la derecha: 1 7 31
$@1 (38)
    en la izquierda: 2, en la derecha: 3
sub_progs (39)
    en la izquierda: 4 5, en la derecha: 3 4
sub_prog (40)
    en la izquierda: 7, en la derecha: 4
$@2 (41)
    en la izquierda: 6, en la derecha: 7
local_var_dec (42)
    en la izquierda: 10 11, en la derecha: 3
$@3 (43)
    en la izquierda: 8, en la derecha: 10
$@4 (44)
    en la izquierda: 9, en la derecha: 10
header_program (45)
    en la izquierda: 12, en la derecha: 1
start_block (46)
    en la izquierda: 13, en la derecha: 3
end_block (47)
    en la izquierda: 14, en la derecha: 3
local_var (48)
    en la izquierda: 15 16, en la derecha: 10 15
var_body (49)
    en la izquierda: 18 19, en la derecha: 15 16
$@5 (50)
    en la izquierda: 17, en la derecha: 18
list_id (51)
    en la izquierda: 20 21 22, en la derecha: 18 20 46 47
header_subprogram (52)
    en la izquierda: 24 25, en la derecha: 7
$@6 (53)
    en la izquierda: 23, en la derecha: 24
parameters (54)
    en la izquierda: 26 27 28, en la derecha: 24 26
sentences (55)
    en la izquierda: 29 30, en la derecha: 3 29
sentence (56)
    en la izquierda: 31 32 33 34 35 36 37 38 39 40 41, en la derecha:
    29 30 43 44 45 50
sentence_assign (57)
    en la izquierda: 42, en la derecha: 32
sentence_if_then_else (58)
    en la izquierda: 43 44, en la derecha: 33
sentence_while (59)
    en la izquierda: 45, en la derecha: 34
sentence_input (60)
    en la izquierda: 46 47, en la derecha: 35
sentence_output (61)
    en la izquierda: 48, en la derecha: 36
sentence_return (62)
    en la izquierda: 49, en la derecha: 37
sentence_do_until (63)
    en la izquierda: 50, en la derecha: 38
sentence_list_forward_back (64)
    en la izquierda: 51, en la derecha: 39
sentence_list_start_cursor (65)
    en la izquierda: 52, en la derecha: 40
expr (66)
    en la izquierda: 53 54 55 56 57 58 59, en la derecha: 42 43 44
    45 49 50 51 52 53 57 58 64 65 91
function_call (67)
    en la izquierda: 61 63, en la derecha: 56
$@7 (68)
    en la izquierda: 60, en la derecha: 61
$@8 (69)
    en la izquierda: 62, en la derecha: 63
list_expr (70)
    en la izquierda: 64 65, en la derecha: 61 64
type (71)
    en la izquierda: 66 67, en la derecha: 12 18 24 25 26 27
const (72)
    en la izquierda: 68 69 70 71 72, en la derecha: 55
const_list (73)
    en la izquierda: 73 74 75 76, en la derecha: 72
list_of_int (74)
    en la izquierda: 77, en la derecha: 73
list_int (75)
    en la izquierda: 78 79, en la derecha: 77 78
list_of_float (76)
    en la izquierda: 80, en la derecha: 74
list_float (77)
    en la izquierda: 81 82, en la derecha: 80 81
list_of_char (78)
    en la izquierda: 83, en la derecha: 75
list_char (79)
    en la izquierda: 84 85, en la derecha: 83 84
list_of_bool (80)
    en la izquierda: 86, en la derecha: 76
list_bool (81)
    en la izquierda: 87 88, en la derecha: 86 87
list_expr_cad (82)
    en la izquierda: 89 90, en la derecha: 48 89
expr_cad (83)
    en la izquierda: 91 92, en la derecha: 89 90


State 0

    0 $accept: . program $end

    TYPE  desplazar e ir al estado 1
    LIST  desplazar e ir al estado 2

    program         ir al estado 3
    header_program  ir al estado 4
    type            ir al estado 5


State 1

   66 type: TYPE .

    $default  reduce usando la regla 66 (type)


State 2

   67 type: LIST . TYPE

    TYPE  desplazar e ir al estado 6


State 3

    0 $accept: program . $end

    $end  desplazar e ir al estado 7


State 4

    1 program: header_program . block

    BEGIN_P  desplazar e ir al estado 8

    block        ir al estado 9
    start_block  ir al estado 10


State 5

   12 header_program: type . MAIN PL PR

    MAIN  desplazar e ir al estado 11


State 6

   67 type: LIST TYPE .

    $default  reduce usando la regla 67 (type)


State 7

    0 $accept: program $end .

    $default  aceptar


State 8

   13 start_block: BEGIN_P .

    $default  reduce usando la regla 13 (start_block)


State 9

    1 program: header_program block .

    $default  reduce usando la regla 1 (program)


State 10

    3 block: start_block . $@1 local_var_dec sub_progs sentences end_block

    $default  reduce usando la regla 2 ($@1)

    $@1  ir al estado 12


State 11

   12 header_program: type MAIN . PL PR

    PL  desplazar e ir al estado 13


State 12

    3 block: start_block $@1 . local_var_dec sub_progs sentences end_block

    START_VAR_DEC  desplazar e ir al estado 14

    $default  reduce usando la regla 11 (local_var_dec)

    local_var_dec  ir al estado 15


State 13

   12 header_program: type MAIN PL . PR

    PR  desplazar e ir al estado 16


State 14

   10 local_var_dec: START_VAR_DEC . $@3 local_var $@4 END_VAR_DEC

    $default  reduce usando la regla 8 ($@3)

    $@3  ir al estado 17


State 15

    3 block: start_block $@1 local_var_dec . sub_progs sentences end_block

    $default  reduce usando la regla 5 (sub_progs)

    sub_progs  ir al estado 18


State 16

   12 header_program: type MAIN PL PR .

    $default  reduce usando la regla 12 (header_program)


State 17

   10 local_var_dec: START_VAR_DEC $@3 . local_var $@4 END_VAR_DEC

    error  desplazar e ir al estado 19
    TYPE   desplazar e ir al estado 1
    LIST   desplazar e ir al estado 2

    local_var  ir al estado 20
    var_body   ir al estado 21
    type       ir al estado 22


State 18

    3 block: start_block $@1 local_var_dec sub_progs . sentences end_block
    4 sub_progs: sub_progs . sub_prog

    error                 desplazar e ir al estado 23
    IF                    desplazar e ir al estado 24
    DO                    desplazar e ir al estado 25
    OP_LIST_START_CURSOR  desplazar e ir al estado 26
    OP_UNIT               desplazar e ir al estado 27
    TYPE                  desplazar e ir al estado 1
    BEGIN_LIST            desplazar e ir al estado 28
    PL                    desplazar e ir al estado 29
    BEGIN_P               desplazar e ir al estado 8
    INPUT                 desplazar e ir al estado 30
    OUTPUT                desplazar e ir al estado 31
    LIST                  desplazar e ir al estado 2
    ID                    desplazar e ir al estado 32
    RETURN                desplazar e ir al estado 33
    WHILE                 desplazar e ir al estado 34
    BOOL                  desplazar e ir al estado 35
    INT                   desplazar e ir al estado 36
    FLOAT                 desplazar e ir al estado 37
    CHAR                  desplazar e ir al estado 38

    block                       ir al estado 39
    sub_prog                    ir al estado 40
    start_block                 ir al estado 10
    header_subprogram           ir al estado 41
    sentences                   ir al estado 42
    sentence                    ir al estado 43
    sentence_assign             ir al estado 44
    sentence_if_then_else       ir al estado 45
    sentence_while              ir al estado 46
    sentence_input              ir al estado 47
    sentence_output             ir al estado 48
    sentence_return             ir al estado 49
    sentence_do_until           ir al estado 50
    sentence_list_forward_back  ir al estado 51
    sentence_list_start_cursor  ir al estado 52
    expr                        ir al estado 53
    function_call               ir al estado 54
    type                        ir al estado 55
    const                       ir al estado 56
    const_list                  ir al estado 57
    list_of_int                 ir al estado 58
    list_of_float               ir al estado 59
    list_of_char                ir al estado 60
    list_of_bool                ir al estado 61


State 19

   19 var_body: error .

    $default  reduce usando la regla 19 (var_body)


State 20

   10 local_var_dec: START_VAR_DEC $@3 local_var . $@4 END_VAR_DEC
   15 local_var: local_var . var_body

    error  desplazar e ir al estado 19
    TYPE   desplazar e ir al estado 1
    LIST   desplazar e ir al estado 2

    END_VAR_DEC  reduce usando la regla 9 ($@4)

    $@4       ir al estado 62
    var_body  ir al estado 63
    type      ir al estado 22


State 21

   16 local_var: var_body .

    $default  reduce usando la regla 16 (local_var)


State 22

   18 var_body: type . $@5 list_id SEMICOLON

    $default  reduce usando la regla 17 ($@5)

    $@5  ir al estado 64


State 23

   41 sentence: error .
   59 expr: error .

    OP_BIN    reduce usando la regla 59 (expr)
    OP_LIST   reduce usando la regla 59 (expr)
    $default  reduce usando la regla 41 (sentence)


State 24

   43 sentence_if_then_else: IF . PL expr PR sentence
   44                      | IF . PL expr PR sentence ELSE sentence

    PL  desplazar e ir al estado 65


State 25

   50 sentence_do_until: DO . sentence UNTIL PL expr PR SEMICOLON

    error                 desplazar e ir al estado 23
    IF                    desplazar e ir al estado 24
    DO                    desplazar e ir al estado 25
    OP_LIST_START_CURSOR  desplazar e ir al estado 26
    OP_UNIT               desplazar e ir al estado 27
    BEGIN_LIST            desplazar e ir al estado 28
    PL                    desplazar e ir al estado 29
    BEGIN_P               desplazar e ir al estado 8
    INPUT                 desplazar e ir al estado 30
    OUTPUT                desplazar e ir al estado 31
    ID                    desplazar e ir al estado 32
    RETURN                desplazar e ir al estado 33
    WHILE                 desplazar e ir al estado 34
    BOOL                  desplazar e ir al estado 35
    INT                   desplazar e ir al estado 36
    FLOAT                 desplazar e ir al estado 37
    CHAR                  desplazar e ir al estado 38

    block                       ir al estado 39
    start_block                 ir al estado 10
    sentence                    ir al estado 66
    sentence_assign             ir al estado 44
    sentence_if_then_else       ir al estado 45
    sentence_while              ir al estado 46
    sentence_input              ir al estado 47
    sentence_output             ir al estado 48
    sentence_return             ir al estado 49
    sentence_do_until           ir al estado 50
    sentence_list_forward_back  ir al estado 51
    sentence_list_start_cursor  ir al estado 52
    expr                        ir al estado 53
    function_call               ir al estado 54
    const                       ir al estado 56
    const_list                  ir al estado 57
    list_of_int                 ir al estado 58
    list_of_float               ir al estado 59
    list_of_char                ir al estado 60
    list_of_bool                ir al estado 61


State 26

   52 sentence_list_start_cursor: OP_LIST_START_CURSOR . expr SEMICOLON

    error       desplazar e ir al estado 67
    OP_UNIT     desplazar e ir al estado 27
    BEGIN_LIST  desplazar e ir al estado 28
    PL          desplazar e ir al estado 29
    ID          desplazar e ir al estado 68
    BOOL        desplazar e ir al estado 35
    INT         desplazar e ir al estado 36
    FLOAT       desplazar e ir al estado 37
    CHAR        desplazar e ir al estado 38

    expr           ir al estado 69
    function_call  ir al estado 54
    const          ir al estado 56
    const_list     ir al estado 57
    list_of_int    ir al estado 58
    list_of_float  ir al estado 59
    list_of_char   ir al estado 60
    list_of_bool   ir al estado 61


State 27

   57 expr: OP_UNIT . expr

    error       desplazar e ir al estado 67
    OP_UNIT     desplazar e ir al estado 27
    BEGIN_LIST  desplazar e ir al estado 28
    PL          desplazar e ir al estado 29
    ID          desplazar e ir al estado 68
    BOOL        desplazar e ir al estado 35
    INT         desplazar e ir al estado 36
    FLOAT       desplazar e ir al estado 37
    CHAR        desplazar e ir al estado 38

    expr           ir al estado 70
    function_call  ir al estado 54
    const          ir al estado 56
    const_list     ir al estado 57
    list_of_int    ir al estado 58
    list_of_float  ir al estado 59
    list_of_char   ir al estado 60
    list_of_bool   ir al estado 61


State 28

   77 list_of_int: BEGIN_LIST . list_int END_LIST
   80 list_of_float: BEGIN_LIST . list_float END_LIST
   83 list_of_char: BEGIN_LIST . list_char END_LIST
   86 list_of_bool: BEGIN_LIST . list_bool END_LIST

    BOOL   desplazar e ir al estado 71
    INT    desplazar e ir al estado 72
    FLOAT  desplazar e ir al estado 73
    CHAR   desplazar e ir al estado 74
